--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -62,6 +62,10 @@
         ]]></description>
 
     <change-notes><![CDATA[
+        <b>1.1.0</b>
+        <ul>
+            <li>Compatiblity with Arduino SDK 1.6 on Mac OS X</li>
+        </ul>
         <b>1.0.2</b>
         <ul>
             <li>Removed Groovy runtime, no longer necessary</li>
