--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -62,6 +62,10 @@
         ]]></description>
 
     <change-notes><![CDATA[
+        <b>1.2.1</b>
+        <ul>
+            <li>Re-compiled for Java 6</li>
+        </ul>
         <b>1.2.0</b>
         <ul>
             <li>Added new project creation to Welcome Screen and File menu</li>
