--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -37,8 +37,8 @@
     ]>
 <idea-plugin version="2">
     <id>io.github.francoiscambell.clionarduinoplugin</id>
-    <name>CLion Arduino</name>
-    <version>1.2.2</version>
+    <name>Arduino</name>
+    <version>1.3.0</version>
     <vendor email="" url="https://github.com/francoiscampbell/CLionArduinoPlugin">Francois Campbell</vendor>
 
     <description><![CDATA[
