--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -37,7 +37,7 @@
     ]>
 <idea-plugin version="2">
     <id>io.github.francoiscambell.clionarduinoplugin</id>
-    <name>CLion Arduino</name>
+    <name>Arduino</name>
     <version>1.2.2</version>
     <vendor email="" url="https://github.com/francoiscampbell/CLionArduinoPlugin">Francois Campbell</vendor>
 
